# map_transform

./: .hgignore  CMakeLists.txt  mainpage.dox  manifest.xml  morph_maze.launch  morph_maze3.launch  planning.launch  planning.rviz  transf_intel.launch  transf_maze.launch  transf_maze2.launch  transf_maze3.launch  transf_real.launch  transf_simple.launch
cfg/: ImportanceMapPlanner.cfg  PAstarParams.cfg  Parameters.cfg  Parametersnc.cfg
conf/: custom_rosconsole.conf
docs/: ParametersConfig-usage.dox  ParametersConfig.dox  ParametersConfig.wikidoc  ParametersncConfig-usage.dox  ParametersncConfig.dox  ParametersncConfig.wikidoc
launch/: dynamic_obstacles_planner.launch  map.launch  map_server_test.launch  morph_maze.launch  morph_maze3.launch  multi_robot_planning_AM.launch  multi_robot_planning_sensing.launch  multi_robot_planning_sensing.rviz  multi_robot_planning_sensing_perception.launch  multi_robot_planning_sensing_perception_2.launch  multi_robot_planning_sensing_perception_3.launch  multi_robot_planning_sensing_perception_4.launch  multi_robot_planning_sensing_perception_5_oneRobot_lambda_0dot02.launch  multi_robot_planning_sensing_perception_diffRobot.launch  multi_robot_planning_sensing_perception_sameRobot.launch  obs.launch  pddl.launch  pddl.rviz  pddl_NC.launch  pddl_NC_2.launch  pddl_multi.rviz  pddl_singleRobot.launch  pddl_testMulti.launch  pddl_testMulti_15_me.launch  pddl_twoRobots.launch  pddl_twoRobots.rviz  planSensing.launch  planSensing7.launch  planSensingComp.launch  planSensingCompReal.launch  planSensing_newTest.launch  planSensing_newTest_2.launch  planSensing_perception.launch  planSensing_perception_3.launch  planSensing_perception_diffRobot.launch  planSensing_perception_real.launch  planSensing_test.launch  planSensing_test2.launch  planSensing_test25.launch  planSensing_test3.launch  (+66 more)
launch/pddl_testMulti/: pddl_testMulti.launch  pddl_testMulti_15.launch  pddl_testMulti_15_extr.launch  pddl_testMulti_15_extr_10r.launch  pddl_testMulti_15_lab.launch  pddl_testMulti_15_lab_10r.launch  pddl_testMulti_15_me.launch  pddl_testMulti_15_rooms_10r.launch  pddl_testMulti_15_rooms_2r.launch  pddl_testMulti_extr.launch  pddl_testMulti_lab.launch  pddl_testMulti_me.launch
maps/: intel  map.txt  map.yaml  mapNav_1.pgm  mapNav_1.yaml  mapNav_2.pgm  mapNav_2.yaml  mapNav_4.yaml  mapS3000.pgm  mapS3000.yaml  map_1.pgm  mets.xml  porto.yaml  test.yaml  uber.yaml  uber_2.yaml  uber_25.yaml  uber_26.yaml  uber_4.yaml
msg/: VisCom.msg  VisNode.msg
msg -old/: VisCom.msg
pddl/: paths_0.txt  paths_2.txt  paths_bkup.txt
pddl/any_shape/rooms_high/: GA.pddl  GAP.pddl  Heur.pddl  input.lisp  unfeasible.lisp
pddl/any_shape/rooms_low/: GA.pddl  GAP.pddl  Heur.pddl  input.lisp  unfeasible.lisp
pddl/corridor_high/: Heur.pddl  problem.pddl
pddl/corridor_low/: GAP.pddl  Heur.pddl  problem.pddl
pddl/extremities_high/: GA.pddl  GAP.pddl  Heur.pddl
pddl/extremities_low/: GA.pddl  Heur.pddl  input.lisp  problem.pddl  unfeasible.lisp
pddl/lab_high/: GA.pddl  GAP.pddl  Heur.pddl  input.lisp  problem.pddl
pddl/lab_low/: GA.pddl  GAP.pddl  Heur.pddl  input.lisp  problem.pddl
pddl/mutually_exclusive_high/: GA.pddl  GAP.pddl  Heur.pddl  problem.pddl
pddl/mutually_exclusive_low/: GA.pddl  GAP.pddl  Heur.pddl  problem.pddl
pddl/new lab/new_lab_high/: Heur.pddl  input.lisp
pddl/new lab/new_lab_low/: Heur.pddl  input.lisp  problem.pddl
pddl/new_ini_positions/corridor_high/: GA.pddl  GAP.pddl  Heur.pddl  input.lisp  problem.pddl  unfeasible.lisp
pddl/new_ini_positions/corridor_low/: GA.pddl  Heur.pddl  input.lisp  problem.pddl  unfeasible.lisp
pddl/new_ini_positions/extremities_high/: Heur.pddl  input.lisp  unfeasible.lisp
pddl/new_ini_positions/extremities_low/: GAP.pddl
pddl/new_ini_positions/lab_high/: GAP.pddl  Heur.pddl  input.lisp  problem.pddl  unfeasible.lisp
pddl/new_ini_positions/lab_low/: Heur.pddl  input.lisp  problem.pddl
pddl/new_journal_paper_results/extr_C_10r/: GA.pddl  GAP.pddl  Heur.pddl  input.lisp
pddl/new_journal_paper_results/lab_C_10r/: GA.pddl  GAP.pddl  Heur.pddl  input.lisp  problem.pddl  unfeasible.lisp
pddl/new_journal_paper_results/rooms_C_10r/: GA.pddl  GAP.pddl  Heur.pddl  input.lisp  problem.pddl  unfeasible.lisp
pddl/new_journal_paper_results/rooms_C_2r/: GA.pddl  GAP.pddl  Heur.pddl  input.lisp  problem.pddl
scripts/: regions_editor.py  test.py
src/: CritPoints.cpp  CritPoints.hpp  bugfollowing.cpp  bugfollowing.hpp  chain.cpp  clustering.cpp  clustering.hpp  color.cpp  color.hpp  labelling.cpp  labelling.hpp  morph.cpp  morph.hpp  obs_extremes.cpp  obs_extremes.hpp  obtuseAngle.cpp  obtuseAngle.hpp  planSensing.cpp  planSensingOpt.cpp  planner.cpp  ray.cpp  ray.hpp  reachable_map.cpp  test.cpp  test_morph.cpp  unreachable.cpp  unreachable.hpp  vector_utils.cpp  vector_utils.hpp  vis.cpp  visC_transf.cpp  visC_transf.hpp  visNC.cpp  visNC_transf.cpp  visNC_transf.hpp  vis_transf.cpp  vis_transf.hpp
src/conversions/: points.cpp  points.hpp  points_conversions.cpp  points_conversions.hpp
src/map/: map-generator.cpp  map-planner.cpp  obstacle-generator.cpp  room-generator.cpp
src/planning/: Astar.cpp  Astar.hpp  PAstar.cpp  PAstar.hpp  multi_planner_sensing.cpp  pddl-generator.cpp  pddl-generator_NC.cpp  planSensingOpt.cpp  planner.cpp
src/types/: pointi.cpp  pointi.hpp
src/utils/: bugfollowing.cpp  bugfollowing.hpp  chain.cpp  chain.hpp  clustering.cpp  clustering.hpp  color.cpp  color.hpp  combinatorics.cpp  combinatorics.hpp  labelling.cpp  labelling.hpp  ray.cpp  ray.hpp  vector_utils.cpp  vector_utils.hpp
src/visibility/: CritPoints.cpp  brute_force.cpp  brute_force.hpp  morph.cpp  morph.hpp  obs_extremes.hpp  obtuseAngle.hpp  unreachable.cpp  unreachable.hpp  vis.cpp  visC_transf.cpp  visC_transf.hpp  visNC.cpp  visNC_transf.cpp  visNC_transf.hpp  vis_transf.cpp  vis_transf.hpp
srv/: ObsList.srv  ObsNumber.srv  PAstarSrv.srv  Regions.srv
